admin/client/src/styles/_layout.scss
.cms-content__inner {
  height: 100%;
}

.cms-content__right,
.cms-content__left {
  height: 100%;
  overflow: hidden;
  background-color: $body-bg;
  transition: width .2s;
}

// .cms-content can be split into different left/right zones
// Exampale modifier: --left-sm = small left side panel with right panel width set to auto.
.cms-content__split {
  height: 100%;
}

.cms-content__split--left-sm {
  .cms-content__right {
    display: none;
  }

  .cms-content__left {
    width: 100%;
    // position: absolute;
    // left: 0;
  }

  // Overlay preview if there isn't enough space for both items and preview
  .cms-content--selected {
    display: block;
  }

  // Back button for smaller screens, closes preview
  .cms-content__back-btn {
    width: 36px;
    height: 36px;
    background-color: rgba($gray-dark, 0.8);
    display: block;
    position: absolute;
    top: 8px;
    left: 12px;
    content: "5";
    font-size: 16px;
    line-height: 20px;
    color: $white;
    padding: 8px;
    border-radius: 50%;
    font-family: silverstripe;
    z-index: 1;
    cursor: pointer;

    &:hover {
      background-color: $gray-dark;
      text-decoration: none;
    }
  }

  @include media-breakpoint-up(lg) {
    // padding-left: $cms-panel-sm;

    .cms-content__left {
      width: $cms-panel-sm;
    }

    .cms-content__right {
      display: block;
      border-left: 1px solid $border-color;
    }

    .cms-content__back-btn {
      display: none;
    }
  }

  @include media-breakpoint-up(xl) {
    // padding-left: $cms-panel-md;

    .cms-content__left {
      width: $cms-panel-md;
    }
  }
}


// Panels, basic holder for CMS content areas
// Use .container-fluid if you want only padding left and right
.panel {
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

.panel--padded {
  padding: $panel-padding-y $panel-padding-x;
}

// Scrolling panels
.panel--scrollable {
  overflow-y: auto;
}

// Panel height adjustments for scrolling
.panel--single-toolbar {
  height: calc(100% - #{$toolbar-total-height});
}

.panel--double-toolbar {
  height: calc(100% - #{$toolbar-total-height * 2});
}

.panel--triple-toolbar {
  height: calc(100% - #{$toolbar-total-height * 3});
}



// Component helpers

// Shadows
.z-depth-1 {
  box-shadow: $z-depth-1;
}

.z-depth-2 {
  box-shadow: $z-depth-2;
}

.z-depth-3 {
  box-shadow: $z-depth-3;
}

.z-depth-4 {
  box-shadow: $z-depth-4;
}


// TEMPORY FLEXBOX STYLES
// Reference https://css-tricks.com/boxes-fill-height-dont-squish/
// Reference http://codepen.io/clarkepaul/pen/qaNWAY

*, *:before, *:after {
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}

html, body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  display: -ms-flexbox;
  display: flex;
}

// Flex magic
// Nested items take up height
.fill-height {
  height: 100%;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-direction: column;
  flex-direction: column;
}

// Nested items take up width
.fill-width {
  width: 100%;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-direction: row;
  flex-direction: row; // Default
}

// Item to take up available space
.flexbox-area-grow {
  -ms-flex: 1;
  flex: 1;
}

